--- a/backend/client/index.html
+++ b/backend/client/index.html
@@ -9,14 +9,14 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MEAN Node Backend 2</title>
+    <title>MEAN Node Backend</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="">
 </head>
 
 <body>
-    <p>MEAN weather app, by Jahan</p>
+    <p>MEAN weather app, by Jahan: 13:15, 21May, 2020</p>
     <!-- [if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif] -->
