Up to date - working

--- a/backend/client/index.html
+++ b/backend/client/index.html
@@ -17,6 +17,8 @@
 
 <body>
     <p>MEAN weather app, by Jahan: 13:15, 21May, 2020</p>
+    <p>MEAN weather app, by March 1st 2021</p>
+
     <!-- [if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif] -->
